--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +30,153 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+/* body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+} */
+
+
+html {
+    --s: 7px; /* control the size*/
+    --c1: #ebebeb;
+    --c2: #ffffff;
+    
+    --c: var(--c1) 0 25%,var(--c2) 0 50%,#0000 0;
+  }
+
+.background {
+    background:
+      conic-gradient(from 180deg,var(--c)) 
+      0/var(--s) var(--s),
+      repeating-conic-gradient(from 90deg,var(--c))
+      0/calc(3*var(--s)) calc(3*var(--s));
+    width: 100vw;
+    height: 100vh;
+}
+
+
+.lds-ripple,
+.lds-ripple div {
+  box-sizing: border-box;
+}
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid currentColor;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    opacity: 0;
+  }
+}
+
+.chatBg {
+    --s: 20px; /* control the size*/
+    --c1: #f2f2f2;
+    --c2: #fafafa;
+    
+    --_g: #0000 8%,var(--c1) 0 17%,#0000 0 58%;
+    background: 
+      linear-gradient(135deg,#0000 20.5%,var(--c1) 0 29.5%,#0000 0) 0 calc(var(--s)/4),
+      linear-gradient( 45deg,var(--_g)) calc(var(--s)/2) 0,
+      linear-gradient(135deg,var(--_g),var(--c1) 0 67%,#0000 0),        
+      linear-gradient( 45deg,var(--_g),var(--c1) 0 67%,#0000 0 83%,var(--c1) 0 92%,#0000 0),
+      var(--c2); 
+    background-size: var(--s) var(--s);
+}
+
+.sharp-image {
+    image-rendering: pixelated;
+}
+  
+.codeBlock {
+    display: flex;
+}
+.codeBlock > div {
+    border-radius: 8px;
+    background-color: #f3f4f6;
+    overflow: hidden;
+}
+.codeBlock p {
+    font-weight: bold;
+    color: #059669;
+    line-height: 175%;
+    letter-spacing: 0.5px;
+    text-wrap: nowrap;
+}
+.codeLanguage {
+    padding: 0.5em;
+    /* background-color: #eceef3; */
+    border-bottom: solid 1px #e5e7eb;
+    color: #059669;
+    font-weight: lighter;
+}
+.codeInnerDiv {
+    padding: 2em;
+    max-width: 500px;
+    max-height: 300px;
+    overflow-x: scroll;
+}
+
+b {
+    font-weight: bold;
+}
+
+.gamesSubTab {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.gamesTab:hover .gamesSubTab {
+    display: flex;
+}
+
+.agarioBg {
+    background-color: #ffffff;
+    opacity: 1;
+    background-image:  linear-gradient(#efefef 2px, transparent 2px), linear-gradient(to right, #efefef 2px, #ffffff 2px);
+    background-size: 36px 36px;
 }
