--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@ html {
   }
 }
 
-.chatBg {
+.chatBg1 {
     --s: 20px; /* control the size*/
     --c1: #f2f2f2;
     --c2: #fafafa;
@@ -124,6 +124,12 @@ html {
       linear-gradient( 45deg,var(--_g),var(--c1) 0 67%,#0000 0 83%,var(--c1) 0 92%,#0000 0),
       var(--c2); 
     background-size: var(--s) var(--s);
+}
+
+.chatBg {
+    background-color: #fafafa;
+    background-image: url("data:image/svg+xml,%3Csvg width='32' height='26' viewBox='0 0 32 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 0v3.994C14 7.864 10.858 11 7 11c-3.866 0-7-3.138-7-7.006V0h2v4.005C2 6.765 4.24 9 7 9c2.756 0 5-2.236 5-4.995V0h2zm0 26v-5.994C14 16.138 10.866 13 7 13c-3.858 0-7 3.137-7 7.006V26h2v-6.005C2 17.235 4.244 15 7 15c2.76 0 5 2.236 5 4.995V26h2zm2-18.994C16 3.136 19.142 0 23 0c3.866 0 7 3.138 7 7.006v9.988C30 20.864 26.858 24 23 24c-3.866 0-7-3.138-7-7.006V7.006zm2-.01C18 4.235 20.244 2 23 2c2.76 0 5 2.236 5 4.995v10.01C28 19.765 25.756 22 23 22c-2.76 0-5-2.236-5-4.995V6.995z' fill='%23f2f2f2' fill-opacity='1' fill-rule='evenodd'/%3E%3C/svg%3E");
+    background-position: center;
 }
 
 .sharp-image {
@@ -157,6 +163,28 @@ html {
     max-width: 500px;
     max-height: 300px;
     overflow-x: scroll;
+}
+
+@media (prefers-color-scheme: dark) {
+    .codeBlock > div {
+        border-radius: 8px;
+        background-color: #171717;
+        overflow: hidden;
+    }
+
+    .codeLanguage {
+        padding: 0.5em;
+        /* background-color: #eceef3; */
+        border-bottom: solid 1px #404040;
+        color: #059669;
+        font-weight: lighter;
+    }
+
+    .chatBg {
+        background-color: #222222;
+        background-image: url("data:image/svg+xml,%3Csvg width='32' height='26' viewBox='0 0 32 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 0v3.994C14 7.864 10.858 11 7 11c-3.866 0-7-3.138-7-7.006V0h2v4.005C2 6.765 4.24 9 7 9c2.756 0 5-2.236 5-4.995V0h2zm0 26v-5.994C14 16.138 10.866 13 7 13c-3.858 0-7 3.137-7 7.006V26h2v-6.005C2 17.235 4.244 15 7 15c2.76 0 5 2.236 5 4.995V26h2zm2-18.994C16 3.136 19.142 0 23 0c3.866 0 7 3.138 7 7.006v9.988C30 20.864 26.858 24 23 24c-3.866 0-7-3.138-7-7.006V7.006zm2-.01C18 4.235 20.244 2 23 2c2.76 0 5 2.236 5 4.995v10.01C28 19.765 25.756 22 23 22c-2.76 0-5-2.236-5-4.995V6.995z' fill='%23262626' fill-opacity='1' fill-rule='evenodd'/%3E%3C/svg%3E");
+        background-position: center;
+    }
 }
 
 b {
