--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -238,8 +238,8 @@ b {
     text-align: center;
     transition: 0.7s ease;
     transform-style: preserve-3d;
-    border: solid 1px rgb(60,60,60);
-    border-radius: 5px;
+    border-bottom: solid 1px rgb(60,60,60);
+    /* border-radius: 5px; */
     background-color: rgb(23,23,23);
 }
 
@@ -354,7 +354,7 @@ b {
 
 .card-info {
     margin: 0;
-    font-size: 2.5em;
+    font-size: 1.5em;
     /* color: white; */
 }
 
@@ -386,7 +386,7 @@ b {
 }
 
 .card-grid-item {
-    border: none;
+    /* border: none; */
     font-size: 1em;
     border-radius: 5px;
     overflow: hidden;
@@ -398,7 +398,7 @@ b {
     /* flex: auto; if I want them to grow */
 }
 .card-grid-item:hover {
-    background-color: rgb(30,30,30);
+    /* background-color: rgb(30,30,30); */
 }
 
 #card-grid-item-h3 {
@@ -408,7 +408,7 @@ b {
     width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    border: solid 1px rgb(60,60,60);
+    /* border: solid 1px rgb(60,60,60); */
     border-bottom: none;
     line-height: normal;
 }
@@ -430,11 +430,11 @@ b {
 }
 
 #card-grid-percent-outer {
-    height: 3px;
+    height: 5px;
     width: 100%;
-    background-color: rgb(60,60,60);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    /* background-color: rgb(60,60,60); */
+    /* border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px; */
     overflow: hidden;
 }
 
