--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -192,9 +192,76 @@ nav {
 
     .chatBg {
         background-color: #171717;
-        /* background-image: url('../../public/images/diag-gray-4.svg'); */
+        background-image: url('../../public/images/spot-bg.svg');
+        background-size: 200%;
         background-position: center;
     }
+}
+
+.iconBg {
+    /* background-image: url('../../public/images/icon-bg-2.svg'); */
+    background-position: center;
+    /* background-size: 200%; */
+}
+
+.shineBg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(210deg,#e0f2fe00 0%, #e0f2fe 50%, #e0f2fe00 100%);
+    background-size: 450% 100%; /* make room for sliding */
+    animation: slideGradient 6s ease-in-out infinite;
+}
+
+@keyframes slideGradient {
+    0% {
+        background-position: 100% 0%;
+        opacity: 0;
+    }
+    30% {
+        background-position: 100% 0%;
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.25;
+    }
+    70% {
+        background-position: 0% 0%;
+        opacity: 0;
+    }
+    100% {
+        background-position: 0% 0%;
+        opacity: 0;
+    }
+}
+
+.pulseBg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: #d97706;
+    animation: pulse 3s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0.35
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.35;
+    }
+}
+
+.newTag {
+    font-size: 8px;
+    padding-block: 1px;
+    padding-inline: 4px;
+    transform: rotate(20deg);
 }
 
 b {
@@ -224,7 +291,7 @@ b {
 }
 
 #card {
-    width: 100%;
+    width: 90%;
     max-width: 500px;
     height: auto;
     aspect-ratio: 3/2;
@@ -243,20 +310,24 @@ b {
     text-align: center;
     transition: 0.7s ease;
     transform-style: preserve-3d;
-    border-bottom: solid 1px rgb(60,60,60);
-    /* border-radius: 5px; */
-    background-color: rgb(23,23,23);
+    /* border-bottom: solid 1px rgb(60,60,60); */
+    border-radius: 5px;
+    /* background-color: rgb(23,23,23); */
 }
 
 #card-front, #card-back {
     position: absolute;
+    top: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    background-color: #262626;
+    border-radius: 5px;
 }
 
 #card-back {
@@ -358,8 +429,8 @@ b {
 }
 
 .card-info {
-    margin: 0;
-    font-size: 1.5em;
+    /* margin: 0;
+    font-size: 1.5em; */
     /* color: white; */
 }
 
@@ -392,9 +463,10 @@ b {
 
 .card-grid-item {
     /* border: none; */
+    position: relative;
     font-size: 1em;
     border-radius: 7px;
-    overflow: hidden;
+    /* overflow: hidden; */
     text-align: center;
     min-width: 52px;
     cursor: pointer;
@@ -411,7 +483,7 @@ b {
 #card-grid-item-h3 {
     /* text-align: center; */
     margin: 0;
-    padding: 0.5rem 0.6rem;
+    padding: 0.2rem 0.4rem;
     width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
