--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -192,7 +192,7 @@ nav {
 
     .chatBg {
         background-color: #171717;
-        background-image: url('../../public/images/spot-bg.svg');
+        background-image: url('../../public/images/diag-gray-4.svg');
         background-size: 200%;
         background-position: center;
     }
@@ -321,13 +321,14 @@ b {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     background-color: #262626;
     border-radius: 5px;
+    
 }
 
 #card-back {
@@ -348,17 +349,18 @@ b {
 
 #card-back-header {
     color: rgb(60,60,60);
-    border-bottom: solid 1px rgb(60,60,60);
+    /* border-bottom: solid 1px rgb(60,60,60); */
     width: 100%;
-    padding: 0.5em 0;
     margin: 0;
+    height: 20%;
+    line-height: 43px;
 }
 
 #card-back-inner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: start;
     /* gap: 1em; */
     height: 100%;
 }
@@ -473,8 +475,8 @@ b {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    /* flex: auto; if I want them to grow */
+    /* justify-content: space-between; */
+    flex: auto;
 }
 .card-grid-item:hover {
     /* background-color: rgb(30,30,30); */
